translation-tool/inputs/source_meta/objects/HughesSvc_ParameterFieldValueMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores the parameter and the API name from which the value for the parameter can be fetched</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcateTo_Param__c</fullName>
        <description>This field signifies the URL parameter to which all the isConcate child parameters is concatenated to</description>
        <label>ConcateTo Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendedValue__c</fullName>
        <label>ExtendedValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_processing_Class__c</fullName>
        <description>Stores the Pre processing Class</description>
        <label>Pre-processing Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addRandomCharacters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked, if any random characters are to be added to the parameter, while encryption</description>
        <label>addRandomCharacters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>encodeForURL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked, if the parameter has to be encoded for URL, while encryption</description>
        <label>encodeForURL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isConcateNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field signifies if the concatenation of URL params is needed or not</description>
        <label>isConcateNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDecryptionNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the value must be decrypted</description>
        <label>isDecryptionNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEncryptionNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEncryptionNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>whichEncryption__c</fullName>
        <label>whichEncryption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HughesSvc_ParameterFieldValueMapping</label>
</CustomObject>